--- a/index.html
+++ b/index.html
@@ -74,31 +74,35 @@
       </section>
 
       <!-- Target Market Section -->
-      <section id="market" class="section market-section">
-        <div class="container two-column">
-          <div class="text">
-            <h2>Who We Serve</h2>
-            <h3>Primary Niche</h3>
-            <ul class="bullets">
-              <li>Coaches, consultants &amp; service‑based businesses</li>
-              <li>Aged 50–75, earning $100K–$500K/year</li>
-              <li>Not tech‑savvy and wasting time &amp; leads</li>
-              <li>Value service over software, willing to invest</li>
-            </ul>
-            <h3>Secondary Niche</h3>
-            <ul class="bullets">
-              <li>Real estate professionals</li>
-              <li>Insurance &amp; financial advisers</li>
-              <li>Medspa &amp; wellness clinics</li>
-              <li>Law firms &amp; legal services</li>
-              <li>High‑leverage, high‑admin businesses</li>
-            </ul>
-          </div>
-          <div class="image">
-            <img src="assets/target-illustration.png" alt="Target market illustration" />
-          </div>
-        </div>
-      </section>
+<section id="market" class="section market-section">
+  <div class="container two-column">
+    <div class="text">
+      <h2>Who We Serve</h2>
+      <p>We work with service-based businesses that rely on people, processes, and performance. Our clients want to scale efficiently without getting buried in admin or tech tools they don’t have time to learn.</p>
+
+      <h3>Core Clients</h3>
+      <ul class="bullets">
+        <li>Consultants, advisors, and agency owners</li>
+        <li>Client-first professionals who value outcomes over dashboards</li>
+        <li>Busy operators looking to reclaim time and reduce overhead</li>
+        <li>Service teams seeking smarter, done-for-you automation</li>
+      </ul>
+
+      <h3>Specialized Industries</h3>
+      <ul class="bullets">
+        <li>Real estate brokerages and high-volume agents</li>
+        <li>Insurance and financial services professionals</li>
+        <li>Legal teams and boutique law firms</li>
+        <li>Medspa, wellness, and aesthetic clinics</li>
+        <li>Admin-heavy businesses ready to streamline operations</li>
+      </ul>
+    </div>
+    <div class="image">
+      <img src="assets/target-illustration.png" alt="Target market illustration" />
+    </div>
+  </div>
+</section>
+
 
       <!-- Packages Section -->
       <section id="packages" class="section packages-section">
