--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script defer src="script.js"></script>
   </head>
   <body>
+    <!-- Logo at top of page -->
+<div class="logo" style="padding: 20px;">
+  <img src="logo.png" alt="Qorra AI logo" style="height: 60px;" />
+</div>
     <header class="navbar">
       <div class="container nav-wrapper">
         <a href="#home" class="logo"><img src="assets/logo.png" alt="Qorra AI logo" /></a>
