--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <header class="navbar">
       <div class="container nav-wrapper">
-        <a href="#home" class="logo"><img src="assets/logo.png" alt="Qorra AI logo" /></a>
+        <a href="#home" class="logo">
+  <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
+</a>
+
         <nav class="nav-menu">
           <ul>
             <li><a href="#solution">Solution</a></li>
