--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <body>
     <header class="navbar">
       <div class="container nav-wrapper">
-        <a href="#solution" class="logo">
-  <img src="assets/logo.png" alt="Qorra AI logo" style="max-height: 80px; width: auto;" />
+        <a href="#home" class="logo">
+  <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
 </a>
+
 
   
 
