--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     </header>
 
     <main>
-      <!-- Hero Section -->
-      <section id="home" class="hero">
-        <div class="container hero-content">
-          <h1>Unlock Your Time &amp; Growth</h1>
-          <p>High‑impact AI automation designed for established businesses.</p>
-          <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
-        </div>
-      </section>
+     <!-- Hero Section -->
+<section id="home" class="hero">
+  <div class="container hero-content">
+    <img src="assets/automation-robot.png" alt="AI automation workflow" class="hero-image" />
+    <h1>Unlock Your Time &amp; Growth</h1>
+    <p>High‑impact AI automation designed for established businesses.</p>
+    <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
+  </div>
+</section>
+
 
       <!-- Problem Section -->
       <section id="problem" class="section problem-section">
