--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
     <header class="navbar">
       <div class="container nav-wrapper">
         <a href="#home" class="logo">
-  <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
-</a>
-
-
-  
-
+          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
+        </a>
         <nav class="nav-menu">
           <ul>
             <li><a href="#solution">Solution</a></li>
@@ -29,16 +25,15 @@
     </header>
 
     <main>
-     <!-- Hero Section -->
-<section id="home" class="hero">
-  <div class="container hero-content">
-    <img src="assets/automation-robot.png" alt="AI automation workflow" class="hero-image" />
-    <h1>Unlock Your Time &amp; Growth</h1>
-    <p>High‑impact AI automation designed for established businesses.</p>
-    <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
-  </div>
-</section>
-
+      <!-- Hero Section -->
+      <section id="home" class="hero">
+        <div class="container hero-content">
+          <img src="assets/automation-robot.png" alt="AI automation visual" class="hero-image" />
+          <h1>Unlock Your Time &amp; Growth</h1>
+          <p>High‑impact AI automation designed for established businesses.</p>
+          <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
+        </div>
+      </section>
 
       <!-- Problem Section -->
       <section id="problem" class="section problem-section">
@@ -82,35 +77,34 @@
       </section>
 
       <!-- Target Market Section -->
-<section id="market" class="section market-section">
-  <div class="container two-column">
-    <div class="text">
-      <h2>Who We Serve</h2>
-      <p>We work with service-based businesses that rely on people, processes, and performance. Our clients want to scale efficiently without getting buried in admin or tech tools they don’t have time to learn.</p>
+      <section id="market" class="section market-section">
+        <div class="container two-column">
+          <div class="text">
+            <h2>Who We Serve</h2>
+            <p>We work with service-based businesses that rely on people, processes, and performance. Our clients want to scale efficiently without getting buried in admin or tech tools they don’t have time to learn.</p>
 
-      <h3>Core Clients</h3>
-      <ul class="bullets">
-        <li>Consultants, advisors, and agency owners</li>
-        <li>Client-first professionals who value outcomes over dashboards</li>
-        <li>Busy operators looking to reclaim time and reduce overhead</li>
-        <li>Service teams seeking smarter, done-for-you automation</li>
-      </ul>
+            <h3>Core Clients</h3>
+            <ul class="bullets">
+              <li>Consultants, advisors, and agency owners</li>
+              <li>Client-first professionals who value outcomes over dashboards</li>
+              <li>Busy operators looking to reclaim time and reduce overhead</li>
+              <li>Service teams seeking smarter, done-for-you automation</li>
+            </ul>
 
-      <h3>Specialized Industries</h3>
-      <ul class="bullets">
-        <li>Real estate brokerages and high-volume agents</li>
-        <li>Insurance and financial services professionals</li>
-        <li>Legal teams and boutique law firms</li>
-        <li>Medspa, wellness, and aesthetic clinics</li>
-        <li>Admin-heavy businesses ready to streamline operations</li>
-      </ul>
-    </div>
-    <div class="image">
-      <img src="assets/target-illustration.png" alt="Target market illustration" />
-    </div>
-  </div>
-</section>
-
+            <h3>Specialized Industries</h3>
+            <ul class="bullets">
+              <li>Real estate brokerages and high-volume agents</li>
+              <li>Insurance and financial services professionals</li>
+              <li>Legal teams and boutique law firms</li>
+              <li>Medspa, wellness, and aesthetic clinics</li>
+              <li>Admin-heavy businesses ready to streamline operations</li>
+            </ul>
+          </div>
+          <div class="image">
+            <img src="assets/robot-and-man.png" alt="Target market visual - human and AI working together" />
+          </div>
+        </div>
+      </section>
 
       <!-- Packages Section -->
       <section id="packages" class="section packages-section">
@@ -197,8 +191,9 @@
     <footer class="footer">
       <div class="container footer-content">
         <p>&copy; 2025 Qorra AI. All rights reserved.</p>
-        <p class="citation">*Research shows that lead generation forms that blend seamlessly into your website’s design yield higher conversion rates【529287160328501†L92-L103】.</p>
+        <p class="citation">*Research shows that lead generation forms that blend seamlessly into your website’s design yield higher conversion rates .</p>
       </div>
     </footer>
   </body>
 </html>
+
