--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Hero Section -->
       <section id="home" class="hero">
         <div class="container hero-content">
-          <img src="assets/automation-robot.png" alt="AI automation visual" class="hero-image" />
+          <img src="assets/automation-robot.png" alt="Hero image" />
           <h1>Unlock Your Time &amp; Growth</h1>
           <p>High‑impact AI automation designed for established businesses.</p>
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
