--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Hero Section -->
       <section id="home" class="hero">
         <div class="container hero-content">
-          <img src="assets/automation-robot.png" alt="Hero image" />
+          <img src="assets/automation-robot.png" alt="Automation robot visual" style="max-width: 100%; height: auto; margin-bottom: 1rem;" />
           <h1>Unlock Your Time &amp; Growth</h1>
           <p>High‑impact AI automation designed for established businesses.</p>
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
@@ -49,7 +49,7 @@
             </ul>
           </div>
           <div class="image">
-            <img src="assets/problem-illustration.png" alt="Problem illustration" />
+            <img src="assets/robot-and-man.png" alt="Problem illustration" style="max-width: 100%; height: auto;" />
           </div>
         </div>
       </section>
@@ -101,7 +101,7 @@
             </ul>
           </div>
           <div class="image">
-            <img src="assets/robot-and-man.png" alt="Target market visual - human and AI working together" />
+            <img src="assets/robot-and-man.png" alt="Target market visual - human and AI working together" style="max-width: 100%; height: auto;" />
           </div>
         </div>
       </section>
