--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <main>
       <!-- Hero Section -->
       <section id="home" class="hero">
-        <div class="container hero-content">
-          <img src="assets/automation-robot.png" alt="Automation robot visual" style="max-width: 100%; height: auto; margin-bottom: 1rem;" />
+        <div class="container hero-content" style="text-align: center;">
+          <img src="assets/automation-robot.png" alt="Automation robot visual" style="max-width: 400px; height: auto; margin-bottom: 1rem;" />
           <h1>Unlock Your Time &amp; Growth</h1>
           <p>High‑impact AI automation designed for established businesses.</p>
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
@@ -48,8 +48,8 @@
               <li>Needing AI to stay competitive but lacking time to learn it</li>
             </ul>
           </div>
-          <div class="image">
-            <img src="assets/robot-and-man.png" alt="Problem illustration" style="max-width: 100%; height: auto;" />
+          <div class="image" style="text-align: center;">
+            <img src="assets/robot-and-man.png" alt="Problem illustration" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
@@ -100,8 +100,8 @@
               <li>Admin-heavy businesses ready to streamline operations</li>
             </ul>
           </div>
-          <div class="image">
-            <img src="assets/robot-and-man.png" alt="Target market visual - human and AI working together" style="max-width: 100%; height: auto;" />
+          <div class="image" style="text-align: center;">
+            <img src="assets/robot-and-man.png" alt="Target market visual - human and AI working together" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
