--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Hero Section -->
       <section id="home" class="hero">
         <div class="container hero-content" style="text-align: center;">
-          <img src="assets/automation-robot.png" alt="Automation robot visual" style="max-width: 400px; height: auto; margin-bottom: 1rem;" />
+          <img src="assets/automation-robot.png" alt="Robot analyzing data with business professional" style="max-width: 400px; height: auto; margin-bottom: 1rem;" />
           <h1>Unlock Your Time &amp; Growth</h1>
           <p>High‑impact AI automation designed for established businesses.</p>
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
@@ -49,7 +49,7 @@
             </ul>
           </div>
           <div class="image" style="text-align: center;">
-            <img src="assets/robot-and-man.png" alt="Problem illustration" style="max-width: 400px; height: auto;" />
+            <img src="assets/robot-and-man.png" alt="Robot and man collaborating on business automation" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
@@ -101,7 +101,7 @@
             </ul>
           </div>
           <div class="image" style="text-align: center;">
-            <img src="assets/robot-and-man.png" alt="Target market visual - human and AI working together" style="max-width: 400px; height: auto;" />
+            <img src="assets/robot-and-man.png" alt="Human and AI working together" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
