--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Hero Section -->
       <section id="home" class="hero">
         <div class="container hero-content" style="text-align: center;">
-          <img src="assets/automation-robot.png" alt="Robot analyzing data with business professional" style="max-width: 400px; height: auto; margin-bottom: 1rem;" />
+          <img src="qorra-ai-logo.png" alt="Qorra AI Logo" style="max-width: 240px; height: auto; margin-bottom: 1rem;" />
           <h1>Unlock Your Time &amp; Growth</h1>
           <p>High‑impact AI automation designed for established businesses.</p>
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
@@ -47,9 +47,6 @@
               <li>Overwhelmed by tools they don’t understand</li>
               <li>Needing AI to stay competitive but lacking time to learn it</li>
             </ul>
-          </div>
-          <div class="image" style="text-align: center;">
-            <img src="assets/robot-and-man.png" alt="Robot and man collaborating on business automation" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
@@ -101,7 +98,7 @@
             </ul>
           </div>
           <div class="image" style="text-align: center;">
-            <img src="assets/robot-and-man.png" alt="Human and AI working together" style="max-width: 400px; height: auto;" />
+            <img src="assets/automation-robot.png" alt="AI visualizing business automation" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
