--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
               <li>Needing AI to stay competitive but lacking time to learn it</li>
             </ul>
           </div>
+          <div class="image" style="text-align: center;">
+            <img src="assets/automation-robot.png" alt="Automation robot assisting with workflow" style="max-width: 400px; height: auto;" />
+          </div>
         </div>
       </section>
 
@@ -98,7 +101,7 @@
             </ul>
           </div>
           <div class="image" style="text-align: center;">
-            <img src="assets/automation-robot.png" alt="AI visualizing business automation" style="max-width: 400px; height: auto;" />
+            <img src="assets/robot-and-man.png" alt="Robot and man collaborating in target market" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
