--- a/index.html
+++ b/index.html
@@ -26,14 +26,21 @@
 
     <main>
       <!-- Hero Section -->
-      <section id="home" class="hero">
-        <div class="container hero-content" style="text-align: center;">
-          <img src="qorra-ai-logo.png" alt="Qorra AI Logo" style="max-width: 240px; height: auto; margin-bottom: 1rem;" />
-          <h1>Unlock Your Time &amp; Growth</h1>
-          <p>High‑impact AI automation designed for established businesses.</p>
-          <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
-        </div>
-      </section>
+<section id="home" class="hero" style="background: linear-gradient(to bottom, #ffffff, #f4f6f8);">
+  <div class="container hero-content" style="text-align: center; padding: 4rem 1rem;">
+    <img
+      src="qorra-ai-logo.png"
+      alt="Qorra AI Logo"
+      style="max-width: 240px; height: auto; margin-bottom: 1.5rem; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.07); border-radius: 12px;"
+    />
+    <h1 style="margin-bottom: 0.5rem;">Unlock Your Time &amp; Growth</h1>
+    <p style="font-size: 1.1rem; color: #555; margin-bottom: 1.5rem;">
+      High‑impact AI automation designed for established businesses.
+    </p>
+    <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
+  </div>
+</section>
+
 
       <!-- Problem Section -->
       <section id="problem" class="section problem-section">
