--- a/index.html
+++ b/index.html
@@ -26,21 +26,20 @@
 
     <main>
       <!-- Hero Section -->
-<section id="home" class="hero" style="background: linear-gradient(to bottom, #ffffff, #f4f6f8);">
-  <div class="container hero-content" style="text-align: center; padding: 4rem 1rem;">
-    <img
-      src="qorra-ai-logo.png"
-      alt="Qorra AI Logo"
-      style="max-width: 240px; height: auto; margin-bottom: 1.5rem; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.07); border-radius: 12px;"
-    />
-    <h1 style="margin-bottom: 0.5rem;">Unlock Your Time &amp; Growth</h1>
-    <p style="font-size: 1.1rem; color: #555; margin-bottom: 1.5rem;">
-      High‑impact AI automation designed for established businesses.
-    </p>
-    <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
-  </div>
-</section>
-
+      <section id="home" class="hero" style="background-color: #ffffff;">
+        <div class="container hero-content" style="text-align: center; padding: 3rem 1rem;">
+          <img
+            src="qorra-ai-logo.png"
+            alt="Qorra AI Logo"
+            style="max-width: 200px; height: auto; margin-bottom: 1.25rem;"
+          />
+          <h1 style="margin-bottom: 0.5rem;">Unlock Your Time &amp; Growth</h1>
+          <p style="font-size: 1.1rem; color: #444; margin-bottom: 1.5rem;">
+            High‑impact AI automation designed for established businesses.
+          </p>
+          <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
+        </div>
+      </section>
 
       <!-- Problem Section -->
       <section id="problem" class="section problem-section">
@@ -56,7 +55,7 @@
             </ul>
           </div>
           <div class="image" style="text-align: center;">
-            <img src="assets/automation-robot.png" alt="Automation robot assisting with workflow" style="max-width: 400px; height: auto;" />
+            <img src="assets/automation-robot.png" alt="Automation robot helping with tasks" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
@@ -108,7 +107,7 @@
             </ul>
           </div>
           <div class="image" style="text-align: center;">
-            <img src="assets/robot-and-man.png" alt="Robot and man collaborating in target market" style="max-width: 400px; height: auto;" />
+            <img src="assets/robot-and-man.png" alt="Human and AI collaborating in business" style="max-width: 400px; height: auto;" />
           </div>
         </div>
       </section>
